2012-04-26  Carsten Haitzler (The Rasterman)

	* 1.0.0 release

2012-04-30  Jérôme Pinot

	* Fix build out of tree.

2012-05-09  Cedric Bail

	* Actually test if we are really requesting to monitor the same file.

2012-08-02  Cedric Bail

	* Fix a memory leak when shutting down fallback monitor.

2012-08-07  Cedric Bail

	* Properly shutdown monitor when calling eio_shutdown.

2012-08-21  Cedric Bail

	* Add a comment describing the false positiv detected by static analyzer
	when calling eio_file_set.

2012-08-07  Vincent Torri

	* Do not free Windows stuff when it is not used. Fix seg fault
	* Add log debugging macros

2012-08-30  Cedric Bail

	* Fix memory leak when using file associate API.

2012-08-30  Carsten Haitzler (The Rasterman)

        1.7.0 release